--- a/listado/listado.html
+++ b/listado/listado.html
@@ -64,49 +64,49 @@ APELLIDOS: Medina Fernández
 				</div>
 			</article>
 			<article class="flex wrap list-recipe-item">								
-				<img class="w25" src="../imagenes/Pasta.jpg" alt="Pasta" title="Pasta">
+				<img class="w25" src="../imagenes/galletas.jpg" alt="Pasta" title="Pasta">
 				<div class="w75 list-recipe-info flex wrap">
 					<div class="inner-content">
 						<div class="list-recipe-info-title w100 flex">
-							<h2><a href="../receta/receta.html">Pasta con salsa de colifrol de pimienta de Jamaica</a></h2>
-							<p class="list-recipe-date">13 de marzo, 2019</p>
+							<h2><a href="../receta/receta.html">Galletas de avena, rosa y lima</a></h2>
+							<p class="list-recipe-date">12 de febrero, 2019</p>
 						</div>					
-						<p>Una salsa vegana para la pasta, tan sabrosa y cremosa que resulta irresistible! Está elaborada con coliflor y con otros ingredientes vegetales, que la convierten en…</p>				
+						<p>¿Galletitas para San Valentín? Estas galletas ricas y crujientes, elaboradas con avena y con un rico sabor a rosa y lima son perfectas para celebrarlo!</p>
 						<ul class="flex">
-							<li>Duracion: <span>1 h 30 m</span></li>
-							<li>Dificultad: <span>Fácil</span></li>
+							<li>Duracion: <span>1 h</span></li>
+							<li>Dificultad: <span>Media</span></li>
 						</ul>
 					</div>				
 				</div>
 			</article>
 			<article class="flex wrap list-recipe-item">								
-				<img class="w25" src="../imagenes/Pasta.jpg" alt="Pasta" title="Pasta">
+				<img class="w25" src="../imagenes/mijo.jpg" alt="Pasta" title="Pasta">
 				<div class="w75 list-recipe-info flex wrap">
 					<div class="inner-content">
 						<div class="list-recipe-info-title w100 flex">
-							<h2><a href="../receta/receta.html">Pasta con salsa de colifrol de pimienta de Jamaica</a></h2>
-							<p class="list-recipe-date">13 de marzo, 2019</p>
+							<h2><a href="../receta/receta.html">Mijo cremoso con lentejas, hortalizas y shiitake</a></h2>
+							<p class="list-recipe-date">1 de febrero, 2019</p>
 						</div>					
-						<p>Una salsa vegana para la pasta, tan sabrosa y cremosa que resulta irresistible! Está elaborada con coliflor y con otros ingredientes vegetales, que la convierten en…</p>				
+						<p>Un buen plato de mijo cremoso con lentejas y hortalizas es todo lo que necesitas para templar el cuerpo este invierno! Delicioso y fácil!</p>
 						<ul class="flex">
-							<li>Duracion: <span>1 h 30 m</span></li>
-							<li>Dificultad: <span>Fácil</span></li>
+							<li>Duracion: <span>1 h 45 m</span></li>
+							<li>Dificultad: <span>Difícil</span></li>
 						</ul>
 					</div>				
 				</div>
 			</article>
 			<article class="flex wrap list-recipe-item">								
-				<img class="w25" src="../imagenes/Pasta.jpg" alt="Pasta" title="Pasta">
+				<img class="w25" src="../imagenes/calabacines.jpg" alt="Pasta" title="Pasta">
 				<div class="w75 list-recipe-info flex wrap">
 					<div class="inner-content">
 						<div class="list-recipe-info-title w100 flex">
-							<h2><a href="../receta/receta.html">Pasta con salsa de colifrol de pimienta de Jamaica</a></h2>
-							<p class="list-recipe-date">13 de marzo, 2019</p>
+							<h2><a href="../receta/receta.html">Calabacines rellenos de arroz negro y calabaza</a></h2>
+							<p class="list-recipe-date">18 de diciembre, 2018</p>
 						</div>					
-						<p>Una salsa vegana para la pasta, tan sabrosa y cremosa que resulta irresistible! Está elaborada con coliflor y con otros ingredientes vegetales, que la convierten en…</p>				
+						<p>Estos calabacines rellenos de arroz negro y calabaza que te propongo hoy, son la última receta que publico en el blog en…</p>
 						<ul class="flex">
-							<li>Duracion: <span>1 h 30 m</span></li>
-							<li>Dificultad: <span>Fácil</span></li>
+							<li>Duracion: <span>30 m</span></li>
+							<li>Dificultad: <span>Media</span></li>
 						</ul>
 					</div>				
 				</div>
