--- a/receta/receta.html
+++ b/receta/receta.html
@@ -28,6 +28,27 @@ APELLIDOS: Medina Fernández
 	<main class="page-main flex wrap">
 		<aside class="w25 home-aside">
 			<div class="inner-container">
+				<article class="recipe-ing flex wrap">
+					<h1 class="w100">Preparación</h1>
+					<div class="w75 flex wrap">
+						<h2 class="w100">Ingredientes:</h2>
+						<ul class="w100">
+							<li>Cosa vegana 1</li>
+							<li>Cosa vegana 2</li>
+							<li>Cosa vegana 3</li>
+							<li>Cosa vegana 4</li>
+						</ul>
+					</div>				
+					<div class="w75 flex wrap">
+						<h2 class="w100">Requisitos:</h2>
+						<ul class="w100">
+							<li>Ser vegano</li>
+							<li>Más vegano aún</li>
+							<li>¿Sigues sin serlo?</li>
+							<li>Lo llevas claro</li>
+						</ul>
+					</div>					
+				</article>
 				<article id="about" class="home-about">
 					<h1>Sobre mí</h1>
 					<img class="w75" src="../imagenes/isagil.png" alt="Sobre mí" title="Sobre mí">
@@ -46,29 +67,8 @@ APELLIDOS: Medina Fernández
 		<section class="w75 flex wrap">
 			<div class="w100 recipe-intro">
 				<article class="recipe-desc">
-					<h1 class="start">Introducción</h1>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eaque earum aperiam. Eligendi minus obcaecati voluptatum non numquam voluptas aliquid fugit libero inventore nihil maiores reprehenderit, sequi modi pariatur atque!</p>
-				</article>
-				<article class="recipe-ing flex wrap">
-					<h1 class="w100">Preparación</h1>
-					<div class="w100 flex">
-						<h2>Ingredientes:</h2>
-						<ul class="flex w100">
-							<li>Ingrediente</li>
-							<li>Ingrediente</li>
-							<li>Ingrediente</li>
-							<li>Ingrediente</li>
-						</ul>
-					</div>				
-					<div class="w100 flex">
-						<h2>Requisitos:</h2>
-						<ul class="flex w100">
-							<li>Ingrediente</li>
-							<li>Ingrediente</li>
-							<li>Ingrediente</li>
-							<li>Ingrediente</li>
-						</ul>
-					</div>					
+					<h1 class="start">Pasta con salsa de colifrol de pimienta de Jamaica</h1>
+					<p>Una salsa vegana para la pasta, tan sabrosa y cremosa que resulta irresistible! Está elaborada con coliflor y con otros ingredientes vegetales, que la convierten en…</p>
 				</article>
 				<div class="recipe-steps">
 					<h1 class="w100">Pasos</h1>
@@ -100,6 +100,30 @@ APELLIDOS: Medina Fernández
 						<div class="recipe-step-info flex wrap w100">
 							<h3>Paso 3</h3>
 							<span>15 m</span>
+						</div>	
+						<div class="recipe-step-desc flex">
+							<img class="w25" src="../imagenes/calabacines.jpg">
+							<div class="inner-content w75">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil itaque molestiae temporibus laborum ab amet, quod tenetur odit delectus soluta accusantium cupiditate eos quae perspiciatis corrupti fugit, nobis totam unde!</p>
+							</div>							
+						</div>											
+					</article>
+					<article>
+						<div class="recipe-step-info flex wrap w100">
+							<h3>Paso 4</h3>
+							<span>35 m</span>
+						</div>	
+						<div class="recipe-step-desc flex">
+							<img class="w25" src="../imagenes/calabacines.jpg">
+							<div class="inner-content w75">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil itaque molestiae temporibus laborum ab amet, quod tenetur odit delectus soluta accusantium cupiditate eos quae perspiciatis corrupti fugit, nobis totam unde!</p>
+							</div>							
+						</div>											
+					</article>
+					<article>
+						<div class="recipe-step-info flex wrap w100">
+							<h3>Paso 5</h3>
+							<span>25 m</span>
 						</div>	
 						<div class="recipe-step-desc flex">
 							<img class="w25" src="../imagenes/calabacines.jpg">
