--- a/receta/receta.html
+++ b/receta/receta.html
@@ -65,13 +65,13 @@ APELLIDOS: Medina Fernández
 			</div>
 		</aside>
 		<section class="w75 flex wrap">
-			<div class="w100 recipe-intro">
-				<article class="recipe-desc">
-					<h1 class="start">Pasta con salsa de colifrol de pimienta de Jamaica</h1>
+			<div class="w100">
+				<h1 class="start">Pasta con salsa de colifrol de pimienta de Jamaica</h1>
+				<article class="recipe-intro">
 					<p>Una salsa vegana para la pasta, tan sabrosa y cremosa que resulta irresistible! Está elaborada con coliflor y con otros ingredientes vegetales, que la convierten en…</p>
 				</article>
 				<div class="recipe-steps">
-					<h1 class="w100">Pasos</h1>
+					<h1 class="start">Pasos</h1>
 					<article>
 						<div class="recipe-step-info flex wrap w100">
 							<h3>Paso 1</h3>
