--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -47,22 +47,30 @@ APELLIDOS: Medina Fernández
 			<div class="contact-title">
 				<h1>Contacto</h1>
 			</div>	
-			<form method="GET" class="contact-form flex wrap">				
-				<label class="w100" for="user-mail">Correo electrónico</label>
-				<input class="w100" type="mail" name="user-mail" id="user-mail" placeholder="Introduce tu correo electrónico..."/>
-				<label class="w100" for="user-name">Nombre</label>
-				<input class="w100" type="text" name="user-name" id="user-name" placeholder="Introduce tu nombre..."/>				
-				<label class="w100">Género</label>
-				<div class="contact-form-radio-container">
+			<form method="GET" class="contact-form flex wrap">	
+				<div class="input-container w100">
+					<label for="user-mail">Correo electrónico</label>
+					<input class="w100" type="mail" name="user-mail" id="user-mail" placeholder="Introduce tu correo electrónico..."/>
+				</div>			
+				<div class="input-container w100">
+					<label for="user-name">Nombre</label>
+					<input class="w100" type="text" name="user-name" id="user-name" placeholder="Introduce tu nombre..."/>				
+				</div>												
+				<div class="contact-form-radio-container w100">
+					<label class="contact-form-title">Género</label>					
 					<input id="women" name="user-sex" type="radio" value="women"/>
 					<label for="women">Mujer</label>
 					<input id="man" name="user-sex" type="radio" value="man"/>
-					<label for="women">Hombre</label>				
+					<label for="man">Hombre</label>				
 				</div>
-				<label class="w100" for="user-date">Fecha de nacimiento</label>
-				<input type="date" id="user-date" name="user-date" class="w100">
-				<label class="w100" for="user-content">Mensaje</label>
-				<textarea class="w100" name="user-content" id="user-content" placeholder="Escribe tu mensaje..."></textarea>
+				<div class="input-container w100">
+					<label for="user-date">Fecha de nacimiento</label>
+					<input type="date" id="user-date" name="user-date" class="w100">	
+				</div>				
+				<div class="input-container w100">
+					<label for="user-content">Mensaje</label>
+					<textarea class="w100" name="user-content" id="user-content" placeholder="Escribe tu mensaje..."></textarea>
+				</div>				
 				<input class="w100" type="submit" value="Enviar"/>
 			</form>
 		</section>
